--- a/.github/workflows/full-pipeline.yml
+++ b/.github/workflows/full-pipeline.yml
@@ -30,7 +30,17 @@ jobs:
       - name: Start API (background)
         run: |
           uvicorn api.main:app --host 0.0.0.0 --port 8000 &
-          sleep 10
+          sleep 5
+      - name: Wait for API to be ready
+        run: |
+          for i in {1..20}; do
+            if curl -s http://localhost:8000/health | grep -q "healthy"; then
+              echo "API is up!"
+              break
+            fi
+            echo "Waiting for API..."
+            sleep 2
+          done
       - name: Run all tests
         run: |
           pytest --cov=./ --cov-report=xml 
