--- a/.github/workflows/deploy-model-api.yml
+++ b/.github/workflows/deploy-model-api.yml
@@ -48,5 +48,6 @@ jobs:
       - name: Upload coverage report
         uses: codecov/codecov-action@v1
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.xml
           fail_ci_if_error: false 
